BW: Fixed some backgrounds being stretched

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -9,7 +9,6 @@
 }
 .project-background {
     width: 100vw;
-    height: 110vw;
     display: block;
 }
 #white-bg {
